# mIF-pipeline

./: .gitignore  1_Nimbus_Predict_test.ipynb  AGENTS.md  HANDOFF.md  METHODS.md  PLAN.md  README.md  channel_map.example.json  example.yaml  instanseg_WSI_0272_test_v2.ipynb  merge_ometiff_test.ipynb  pyproject.toml
Reference/: 1_Nimbus_Predict_test.ipynb  instanseg_WSI_0272_test_v2.ipynb  merge_ometiff_test.ipynb
Reference/Nimbus-Inference/: LICENSE  README.md  pyproject.toml
Reference/instanseg-main/: LICENSE  README.md  pyproject.toml
old/: HANDOFF.md  export_masks.py
old/notebooks/: mif_pipeline_debug.ipynb  spatialdata_crop_dual_target_viewers_SLIDE-0329.ipynb  spatialdata_crop_labels_nimbus_SLIDE-0329.ipynb  (+1 more)
prototyping/: 1_Nimbus_Predict_prototype.ipynb  crop.ipynb  harpy_spatialdata_mif_test_lazy_no_sopa_SLIDE-0329_crop_2048_tutorial_instanseg.ipynb  harpy_spatialdata_vectorize_aggregate_written_sdata_SLIDE-0329.ipynb  instanseg_WSI_0272_test_v2.ipynb  mif_pipeline_debug_prototyping_v2-Crop.ipynb  mif_pipeline_debug_prototyping_v2-fullslide.ipynb  mif_pipeline_debug_prototyping_v2.ipynb  mif_pipeline_harpy_spatialdata_api_v1-Crop.ipynb  mif_pipeline_instanseg_nimbus_api_v1-Crop.ipynb  mif_pipeline_instanseg_nimbus_api_v1-fullslide.ipynb  prototype_v2-Crop.yaml  prototype_v2-fullslide.yaml  prototype_v2.yaml  spatialdata_image_write_only_tiffslide_zarr_merged_SLIDE-0329.ipynb  vectorization_compare_harpy_vs_spatialdata_Crop.ipynb
scripts/: mif_pipeline_python_api_example.ipynb  run_pipeline.sh  run_pipeline_parallel.sh
tests/: test_smoke.py
(+2319 files in other folders)
