[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mif-pipeline"
version = "0.1.0"
description = "MIF InstanSeg to Nimbus pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6",
  "numpy>=1.24",
  "pandas>=2.0",
  "tifffile>=2023.8.30",
  "zarr>=2.16",
  "scikit-image>=0.21",
]

[project.scripts]
mif-pipeline = "mif_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
