[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mif-pipeline"
version = "0.1.0"
description = "Notebook-friendly multiplex IF pipeline for merging, InstanSeg, mask export, and Nimbus."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "ome-types",
  "pandas",
  "PyYAML",
  "scikit-image",
  "tifffile",
  "zarr",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
mif-pipeline = "mif_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
